--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"/>
+    <link rel="icon" href="img/loog.png">
 
-    <title>Hello, world!</title>
+    <title>Login</title>
   </head>
   <body class="bg-dark">
       <section>
